--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react-native-dotenv": "^0.2.2",
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
